Bug 1115054 - [RTL][Utility bar] New SIM Inserted notification does not fully fit on screen and should be right-aligned

--- a/apps/system/style/cost_control/cost_control.css
+++ b/apps/system/style/cost_control/cost_control.css
@@ -9,6 +9,6 @@
 
 #cost-control-widget iframe {
   margin: 0 1.5rem;
-  width: 100%;
+  width: auto;
   border-bottom: .1rem solid rgba(255, 255, 255, .05);
 }
